feat: integrasi laporan balasan komentar dan perbaikan dashboard admin